# learn-openai

./: README.md
langchain/: llm_chatmodels.py  prompt_template.py
python-chatgpt/: pyproject.toml
python-chatgpt/python_chatgpt/: assistants_api.py  assistants_api_code_interpreter.py  assistants_api_knowledge_retrieval.py  chatgpt_api.py  chatgpt_api_4omni.py  chatgpt_api_4omni_mini.py  chatgpt_api_in_loop.py  chatgpt_api_streaming.py  chatgpt_api_vision.py  chatgpt_api_with_history.py  fine_tune_output.txt  fine_tuning_data.json  fine_tuning_data_prepared.jsonl  function_calling.py  nlp_to_sql.py  translate.py
python-chatgpt/python_chatgpt/blog_writer/: output.html  template.html
python-chatgpt/python_chatgpt/sample/: event_time.txt  fortune_1000_revenue_2022.csv  news_api_sample.json  temp_with_date.csv
python-chatgpt/python_chatgpt/structured_output/: pydantic_function_calling.py  response_format_1.py  response_format_2.py
python-dalle/: pyproject.toml
python-dalle/python_dalle/: main.py
