[tool.poetry]
name = "python-chatgpt"
version = "0.1.0"
description = ""
authors = ["Seungjoon Lee <altoformula@gmail.com>"]
readme = "README.md"
packages = [{include = "python_chatgpt"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.40.1"
requests = "^2.28.2"
sseclient-py = "^1.7.2"
pandas = "^1.5.3"
sqlalchemy = "^2.0.4"
jinja2 = "^3.1.2"
praw = "^7.7.0"
tiktoken = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
